src/compiler/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Shell/content/Views/Home/About.cshtml.pp
@{
    ViewBag.Title = "About Us";
}

@section container
{    
    <div class="row-fluid">
        <div class="page-header">
            <h1>
                About Us <small>This is a basic reading layout</small></h1>
        </div>
    </div>
    <div class="row-fluid">
        <div class="span4">
            <h2>
                This is the first header</h2>
            <p>
                This is the first paragraph
            </p>
        </div>
        <div class="span8">
            <h2>
                This is the second header</h2>
            <p>
                This is the first paragraph
            </p>
        </div>
    </div>
}

